# Pipeline_tjpe_contado

./: .gitignore  DEPLOY_DOCKER.md  DEPLOY_ORACLE_1GB.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  requirements_todos.txt  scratch_test.py  test_server.py
airflow/dags/: etl_tempo_real.py
atualizar_bd_contadoria/: .env.example  .gitignore  README.md  main.py  requirements.txt
atualizar_bd_contadoria/src/: __init__.py  config.py  database.py  importer.py  utils.py
chatbot/: app.py  main.py
chatbot/services/: gemini_client.py  google_sheets.py  groq_client.py  supabase_loader.py
chatbot/templates/: index.html
data_tempo_real/: 20260327193335_TJPEReports.xlsx  20260327194616_TJPEReports.xlsx  20260327195119_TJPEReports.xlsx
data_transform/: Consolidado.csv  Consolidado.xlsx  Consolidado_supabase.csv  final_tempo_real.xlsx  quantidade_processos.xlsx
data_transform/backups/20260417_215558/: status.csv
data_transform/backups/20260420_172815/: audit_logs.csv
data_transform/backups/20260422_055622/: audit_logs.csv  nucleos.csv  prioridades.csv  users.csv
src/: app_dashboard.py  db_sync.py  extract_tempo_real.py  load_google_tempo_real.py  load_supabase_tempo_real.py  transform_tempo_real.py
supabase/: Consolidado_supabase.csv
